# psh

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  justfile  release.toml
.github/workflows/: ci.yml
assets/themes/: default.css
config/: niri.kdl  psh.toml
crates/psh-bar/: CLAUDE.md  Cargo.toml  ISSUES.md  README.md
crates/psh-bar/src/: main.rs  niri.rs  wayland.rs
crates/psh-bar/src/modules/: battery.rs  claude.rs  clipboard_btn.rs  clock.rs  ipc_button.rs  launcher_btn.rs  mod.rs  network.rs  notifications.rs  tray.rs  volume.rs  window_title.rs  workspaces.rs
crates/psh-cli/: Cargo.toml
crates/psh-cli/src/: main.rs
crates/psh-clip/: CLAUDE.md  Cargo.toml  README.md
crates/psh-clip/src/: history.rs  main.rs  monitor.rs  persist.rs
crates/psh-core/: CLAUDE.md  Cargo.toml  README.md
crates/psh-core/src/: config.rs  dbus.rs  error.rs  ipc.rs  lib.rs  logging.rs  palette.rs  theme.rs
crates/psh-idle/: CLAUDE.md  Cargo.toml  README.md
crates/psh-idle/src/: main.rs
crates/psh-launch/: CLAUDE.md  Cargo.toml  README.md
crates/psh-launch/src/: desktop.rs  frecency.rs  main.rs
crates/psh-lock/: CLAUDE.md  Cargo.toml  README.md
crates/psh-lock/src/: main.rs  pam.rs  render.rs  state.rs
crates/psh-notify/: CLAUDE.md  Cargo.toml  README.md
crates/psh-notify/src/: dbus_server.rs  main.rs  manager.rs
crates/psh-polkit/: CLAUDE.md  Cargo.toml  README.md
crates/psh-polkit/src/: agent.rs  authority.rs  main.rs
crates/psh-wall/: CLAUDE.md  Cargo.toml  README.md
crates/psh-wall/src/: main.rs
pam.d/: psh-lock
systemd/: psh-bar.service  psh-clip.service  psh-idle.service  psh-launch.service  psh-notify.service  psh-polkit.service  psh-wall.service  psh.target
