[package]
name = "psh-bar"
version = "0.1.8"
edition.workspace = true
license.workspace = true

[[bin]]
name = "psh-bar"
path = "src/main.rs"

[dependencies]
psh-core = { workspace = true, features = ["gtk"] }
gtk4 = { workspace = true }
gtk4-layer-shell = { workspace = true }
zbus = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-channel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
niri-ipc = { workspace = true }
system-tray = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
