[package]
name = "psh-clip"
version = "0.1.8"
edition.workspace = true
license.workspace = true

[[bin]]
name = "psh-clip"
path = "src/main.rs"

[dependencies]
psh-core = { workspace = true, features = ["gtk"] }
gtk4 = { workspace = true }
gtk4-layer-shell = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-channel = { workspace = true }
wayland-client = { workspace = true }
wayland-protocols-wlr = { workspace = true }
directories = { workspace = true }
rustix = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
