[package]
name = "psh-core"
version = "0.1.9"
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "sync", "rt"] }
directories = { workspace = true }
notify = { workspace = true }
zbus = { workspace = true }
gtk4 = { workspace = true, optional = true }

[features]
default = []
gtk = ["gtk4"]
