[package]
name = "psh-idle"
version = "0.1.8"
edition.workspace = true
license.workspace = true

[[bin]]
name = "psh-idle"
path = "src/main.rs"

[dependencies]
psh-core = { workspace = true }
wayland-client = { workspace = true }
wayland-protocols = { workspace = true }
smithay-client-toolkit = { workspace = true }
zbus = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
signal-hook = { workspace = true }
futures-util = { workspace = true }
shlex = { workspace = true }
