[package]
name = "psh-launch"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "psh-launch"
path = "src/main.rs"

[dependencies]
psh-core = { workspace = true, features = ["gtk"] }
gtk4 = { workspace = true }
gtk4-layer-shell = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
nucleo-matcher = { workspace = true }
directories = { workspace = true }
async-channel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
