[package]
name = "psh-lock"
version = "0.1.9"
edition.workspace = true
license.workspace = true

[[bin]]
name = "psh-lock"
path = "src/main.rs"

[dependencies]
psh-core = { workspace = true }
smithay-client-toolkit = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
pam-client = { workspace = true }
tiny-skia = { workspace = true }
wayland-client = { workspace = true }
wayland-protocols-wlr = { workspace = true }
signal-hook = { workspace = true }
zeroize = { workspace = true }
libc = { workspace = true }
ab_glyph = { workspace = true }
image = { workspace = true }
