[package]
name = "psh-polkit"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "psh-polkit"
path = "src/main.rs"

[dependencies]
psh-core = { workspace = true, features = ["gtk"] }
gtk4 = { workspace = true }
gtk4-layer-shell = { workspace = true }
zbus = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-channel = { workspace = true }
